<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.a71cities.trfc.views.signUp.SignUpViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.signUp.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_red">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/app_logo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameEdt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/edt_bg"
                android:fontFamily="@font/amiko"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={model.userName}"
                android:textColorHint="@color/selected_red"
                app:layout_constraintBottom_toTopOf="@+id/bottonBg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.25" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEdt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edt_bg"
                android:fontFamily="@font/amiko"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={model.email}"
                android:textColorHint="@color/selected_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEdt" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passEdt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edt_bg"
                android:fontFamily="@font/amiko"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={model.password}"
                android:textColorHint="@color/selected_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEdt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/button_bg_yellow"
                android:fontFamily="@font/amiko"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:onClick="@{model.submitData}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passEdt" />

            <ImageView
                android:id="@+id/bottonBg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/acc_bottom_bg" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amiko"
                    android:text="Already have an account?"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/goToSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amiko"
                    android:padding="6dp"
                    android:text="SignIn"
                    android:textColor="@color/icon_tint_yellow"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>