<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.a71cities.trfc.views.home.HomeViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_red">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imageSliderViewPager"
                android:layout_width="match_parent"
                android:layout_height="430dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:background="@drawable/ic_home_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <!--                    <androidx.cardview.widget.CardView-->
                    <!--                        android:id="@+id/cardView"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="130dp"-->
                    <!--                        android:layout_margin="16dp"-->
                    <!--                        app:cardCornerRadius="10dp"-->
                    <!--                        app:cardElevation="5dp"-->
                    <!--                        app:layout_constraintEnd_toEndOf="parent"-->
                    <!--                        app:layout_constraintStart_toStartOf="parent"-->
                    <!--                        app:layout_constraintTop_toTopOf="parent">-->

                    <!--                        <androidx.constraintlayout.widget.ConstraintLayout-->
                    <!--                            android:layout_width="match_parent"-->
                    <!--                            android:layout_height="match_parent">-->

                    <!--                            <TextView-->
                    <!--                                android:layout_width="wrap_content"-->
                    <!--                                android:layout_height="wrap_content"-->
                    <!--                                android:fontFamily="@font/amiko"-->
                    <!--                                android:text="Get Your Ownership now"-->
                    <!--                                android:textStyle="bold"-->
                    <!--                                app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--                                app:layout_constraintEnd_toEndOf="parent"-->
                    <!--                                app:layout_constraintStart_toStartOf="parent"-->
                    <!--                                app:layout_constraintTop_toTopOf="parent" />-->
                    <!--                        </androidx.constraintlayout.widget.ConstraintLayout>-->
                    <!--                    </androidx.cardview.widget.CardView>-->


                    <!--                    <androidx.recyclerview.widget.RecyclerView-->
                    <!--                        android:id="@+id/recycler"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_gravity="center_horizontal"-->
                    <!--                        android:orientation="vertical"-->
                    <!--                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"-->
                    <!--                        app:layout_constraintEnd_toEndOf="parent"-->
                    <!--                        app:layout_constraintStart_toStartOf="parent"-->
                    <!--                        app:layout_constraintTop_toBottomOf="@+id/cardView"-->
                    <!--                        app:spanCount="3"-->
                    <!--                        tools:itemCount="3"-->
                    <!--                        tools:listitem="@layout/common_tiles_rec_lyt" />-->

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:cardCornerRadius="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backround_light_red">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginStart="16dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/academy_ico"
                                app:tint="@color/icon_tint_yellow" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:fontFamily="@font/amiko"
                                android:text="@string/academy"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView3"
                        android:layout_width="200dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="5dp"
                        app:layout_constraintStart_toStartOf="@+id/cardView"
                        app:layout_constraintTop_toBottomOf="@+id/cardView">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/goToTeams"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backround_light_red">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginStart="16dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/team_icon"
                                app:tint="@color/icon_tint_yellow" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:fontFamily="@font/amiko"
                                android:text="@string/teams"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView4"
                        android:layout_width="200dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/cardView"
                        app:layout_constraintTop_toBottomOf="@+id/cardView3"
                        app:layout_constraintVertical_bias="0.0">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/goToGallery"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backround_light_red">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginStart="16dp"
                                android:padding="10dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/gallery_ico"
                                app:tint="@color/icon_tint_yellow" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:fontFamily="@font/amiko"
                                android:text="@string/gallery"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        app:cardCornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/cardView4"
                        app:layout_constraintEnd_toEndOf="@+id/cardView"
                        app:layout_constraintStart_toEndOf="@+id/cardView3"
                        app:layout_constraintTop_toTopOf="@+id/cardView3"
                        app:layout_constraintVertical_bias="0.0">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backround_light_red">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="32dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/academy_ico"
                                app:tint="@color/icon_tint_yellow" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:fontFamily="@font/amiko"
                                android:text="@string/ownership"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/imageView" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>